--- a/default/commands-economy.yml
+++ b/default/commands-economy.yml
@@ -53,6 +53,7 @@ commands:
       - "Eu também amo sonhos, mas mesmo assim não sou Robin Hood para ficar distribuindo meu dinheiro"
       - "Não tenho inveja desses sonhos, se eu quisesse eu poderia dar a mesma quantidade para mim!"
       clickToAcceptTheTransaction: "Para confirmar a transação, você e {0} devem clicar em {1}!"
+      doYouThinkImPoor: "Você *acha* que eu sou pobre para transferir só isso para mim? Não sou mendiga para aceitar essa merrequinha aí. 2bj"
     flipcoinbet:
       description: "O clássico \"Gire uma moeda e veja se irá cair cara ou coroa!\", mas agora envolvendo sonhos! Não me responsabilizo se você perder tudo em apostas"
       startBet: "{0}, {1} quer fazer uma aposta com você! Cada um irá pagar **{5} sonhos ({6} sonhos de taxa para jogar rs)**. Se cair **{2}**, você irá ganhar **{3} sonhos**, se cair **{4}**, {1} irá ganhar **{3} sonhos**! E aí, vai encarar?"
@@ -126,6 +127,7 @@ commands:
     guessnumber:
       description: "Chute um número de 1 até 10, se for o número que eu estou pensando, eu irei te recompensar com sonhos! Mas se você perder... aí você que terá que me dar sonhos."
       youWin: "Parabéns, você acertou o número que eu estava pensando! Como recompensa, eu te **dei {0} sonhos**!"
+      notEnoughSonhos: "Você não tem sonhos suficientes para adivinhar um número!"
       youLose:
       - "Que pena, eu estava pensando no número {0}... Você **perdeu {1} sonhos**!"
       - "Eu *poderia* ter pensado no seu número, mas eu pensei em {0}... Você **perdeu {1} sonhos**!"
@@ -137,7 +139,7 @@ commands:
       - "Não existe bug, você só não tem sorte bb. Eu pensei no número {0} e você **perdeu {1} sonhos**!"
       - "Faça aí a sua mágica para ter sorte, pois você está sem sorte hoje! Eu pensei no número {0} e você **perdeu {1} sonhos**!"
       - "Você chegou perto, maaaaas não foi dessa vez amigue! Eu pensei no número {0} e, já que eu ganhei, você **perdeu {1} sonhos**!"
-      numberNotInRange: "Você precisa colocar um número entre 1 e 10 para participar! A não ser se você quer perder sonhos colocando um número que eu jamais irei adivinhar."
+      numberNotInRange: "Você precisa colocar um número entre 1 e 10 para participar! A não ser se você quer perder sonhos colocando um número que eu jamais irei pensar."
     emojifight:
       description: "Faça uma rinha de emojis com os seus amigos, o emoji mais forte ganha a rinha!"
       fightTitle: "Rinha de Emoji"
