--- a/en-us/website.yml
+++ b/en-us/website.yml
@@ -54,7 +54,7 @@ website:
   error404:
     title: "Huh, where's the page?"
     description:
-      - "I swear to you she was here! I swear on my mother's soul... and... and on all that is most sacred in this world!"
+      - "I swear it was here! I swear on my mother's soul... and... and on all that is most sacred in this world!"
       - "..."
       - "Oh, I don't know, the page is gone... maybe my friend's cat ate the page! I think the page tasted like pudding with a little bit of HTML tags. Hmm, delicious!"
       - "So... Is too late to now to say sorry?"
