Fix: locale keys changed to camelCase

--- a/default/commands-utils.yml
+++ b/default/commands-utils.yml
@@ -22,9 +22,9 @@ commands:
         - "lista"
       cancel: "Lembrete cancelado!"
       success: "Eu irei te lembrar em **{0}/{1}/{2,number,#}** às **{3}:{4}**!"
-      sethour: "Quando você irá querer que eu te avise deste lembrete? (`1 hora`, `5 minutos`, `12:00 11/08/2018`, etc)"
-      yourreminders: "Seus lembretes"
-      remindat: "Eu irei te lembrar às",
-      createdinguild: "Criado na",
-      remindintextchannel: "Irei avisar no",
-      reminderremoved: "Lembrete removido!"
+      setHour: "Quando você irá querer que eu te avise deste lembrete? (`1 hora`, `5 minutos`, `12:00 11/08/2018`, etc)"
+      yourReminders: "Seus lembretes"
+      remindAt: "Eu irei te lembrar às",
+      createdInGuild: "Criado na",
+      remindInTextChannel: "Irei avisar no",
+      reminderRemoved: "Lembrete removido!"
