--- a/en-us/commands-utils.yml
+++ b/en-us/commands-utils.yml
@@ -25,7 +25,7 @@ commands:
     success: "I will remind you in **{0}/{1}/{2,number,#}** **{3}:{4}**!"
     setHour: "When do you want me to remind you? (`1 hour`, `5 minutes`, `12:00 11/08/2018`, etc)"
     yourReminders: "Your Reminders"
-    remindAt: "I will remind you at",
-    createdInGuild: "Created in",
-    remindInTextChannel: "I will remind you in",
+    remindAt: "I will remind you at"
+    createdInGuild: "Created in"
+    remindInTextChannel: "I will remind you in"
     reminderRemoved: "Reminder removed!"
