--- a/en-us/commands-moderation.yml
+++ b/en-us/commands-moderation.yml
@@ -94,7 +94,5 @@ commands:
         - "35 @MrPowerGamerBR"
       invalidClearRange: "I can only clear between 2 and 100 past messages!"
       couldNotFindMessages: "I couldn't find any messages to be deleted... I can't delete messages that were sent more than two weeks ago due to Discord limitations!"
-      ignoredTooOldMessages: "Chat cleaned by {0}, but {1} messages could not be deleted because they were sent more than 2 weeks ago!"
-      ignoredPinnedMessages: "Chat cleaned by {0}, but {1} messages could not be deleted because they were pinned messages!"
-      ignoredTooOldAndPinnedMessages: "Chat cleaned by {0}, but {1} messages could not be deleted because they were sent more than 2 weeks ago and {2} messages could not be deleted because they were fixed messages!"
-      success: "The chat was cleaned up by {0}!"
+      success: "The chat was cleaned up successfully by {0}!"
+      ignoredMessages: "Beep-boop! Apparently **{0}** messages couldn't be cleaned, for being too old or pinned."
