replace "sueños" and "dreams" with "sonhos"
sonhos shoudn't be translated

--- a/en-us/guidelines.yml
+++ b/en-us/guidelines.yml
@@ -29,7 +29,7 @@ website:
         - "Attempts to evade/circumvent punishments. If you try to do this, you will be punished again, with no chance of being disbanded."
         - "Plagiarize Loritta. You can be inspired by its features, but copying almost identically is prohibited."
         - "Request a refund after purchasing something related to Loritta. All payments are non-refundable, as they are virtual products. If you need support with something related to a product, we recommend that you first contact our support server."
-        - "Selling dreams or other things related to Loritta for real money or for other things with real monetary value. If someone offer it to you, do not accept and report it to Loritta's team, because if you do accept, you will take the risk of being punished and you can even be victim of a scam."
+        - "Selling sonhos or other things related to Loritta for real money or for other things with real monetary value. If someone offer it to you, do not accept and report it to Loritta's team, because if you do accept, you will take the risk of being punished and you can even be victim of a scam."
       onPlatformBreak:
         - "If you find someone who is not respecting the platform guidelines, report to the platform team and, if applicable, report to the Loritta team."
       disrespect:
