--- a/en-us/commands-economy.yml
+++ b/en-us/commands-economy.yml
@@ -56,7 +56,7 @@ commands:
       clickToAcceptTheTransaction: "To confirm the transaction, you and {0} must click {1}!"
     flipcoinbet:
       description: "The classic \"Flip a coin and see if gets heads or tails!\", but now involving sonhos! I'm not responsible if you lose all your sonhos in bets"
-      startBet: "{0}, {1} wants to make a bet with you! Each one will pay **{5} sonhos ({6} fee sonhos to play)**. If it fall **{2}**, you will win **{3} sonhos**, if it fall **{4}**, {1} will win **{3} dreams**! So what, are you gonna face it?"
+      startBet: "{0}, {1} wants to make a bet with you! Each one will pay **{5} sonhos ({6} fee sonhos to play)**. If it fall **{2}**, you will win **{3} sonhos**, if it fall **{4}**, {1} will win **{3} sonhos**! So what, are you gonna face it?"
       startBetNoTax: "{0}, {1} wants to make a bet with you! If it fall **{2}**, you will win **{3} sonhos**, if it falls **{4}**, {1} will win **{3} sonhos**! Since {5} is a recommended premium user, this one is on the house, free of charge! So what, are you gonna face it?"
       congratulations: "Congratulations {0}, you won **{1} sonhos**! Funded by {2} xD"
       notEnoughMoneySelf: "How are you going to bet a quantity you don't have? Bet less if you don't want to bet something you don't have!"
